# cmake-hello-world

./: .gitignore  CMakeLists.txt  README.md
include/greet/: greet.h
src/: greet.cpp  main.cpp
